# Termynth

./: .gitignore  .gitmodules  CMakeLists.txt  CreateProject.py  Install.bat  LICENSE  README.md  TermynthConfig.cmake.in
Content/: Amogus.thtx  AmogusCopy.thtx  GTest.thsprite  GTest.thtx  GTest10.thtx  GTest3.thtx  GTest4.thtx  GTest9.thtx  GTestTrnt.thtx
Samples/Sandbox/: CMakeLists.txt
Samples/Sandbox/Scripts/: Clean.bat  Installed-Build-GPP-Debug.bat  Installed-Build-GPP-Shipping.bat  Submodule-Build-GPP-Shipping.bat
Samples/Sandbox/Source/Private/: Sandbox.cpp
Scripts/: Build-GPP-Debug-Server.bat  Build-GPP-Debug.bat  Build-GPP-Development-Server.bat  Build-GPP-Development.bat  Build-GPP-Shipping-Server.bat  Build-GPP-Shipping.bat  Build-VS-GenerateProjectFiles.bat
Source/Private/: Launch.cpp
Source/Private/Core/: App.cpp  EngineLoop.cpp  Globals.cpp  Logger.cpp  WindowSubsystem.cpp
Source/Private/Engine/: AssetManager.cpp  AudioClipLoader.cpp  Engine.cpp  PakFile.cpp  TextureAsset.cpp  TextureLoader.cpp
Source/Private/Input/: InputManager.cpp
Source/Private/Platform/: Window.cpp
Source/Private/Platform/Generic/: PlatformUtilsGeneric.cpp  PlatformWindowGeneric.cpp
Source/Private/Platform/Linux/: LinuxPlatformUtils.cpp
Source/Private/Platform/Windows/: WindowsPlatformUtils.cpp
Source/Private/Render/: Color.cpp  Renderer.cpp  Texture.cpp
Source/Private/Utils/: ImageLoader.cpp
Source/Programs/TermynthPakBuilder/Private/: PakBuilder.cpp  main.cpp
Source/Programs/TermynthPakBuilder/Public/: PakBuilder.h
Source/Public/Core/: App.h  Core.h  EngineLoop.h  Globals.h  Logger.h
Source/Public/Core/Math/: Math.h  TypesForward.h  Vector.h
Source/Public/Engine/: AssetManager.h  AudioClipLoader.h  PakFile.h  SpriteLoader.h  TextureAsset.h  TextureLoader.h
Source/Public/Input/: InputManager.h  Key.h
Source/Public/Platform/: PlatformUtils.h  Window.h
Source/Public/Platform/Generic/: PlatformUtilsGeneric.h  PlatformWindowGeneric.h
Source/Public/Platform/Linux/: LinuxPlatformUtils.h  LinuxPlatformWindow.h
Source/Public/Platform/Windows/: WindowsPlatformUtils.h  WindowsPlatformWindow.h
Source/Public/Render/: CellAttribute.h  FrameBuffer.h  Renderer.h  Texture.h
Source/Public/Utils/: ImageLoader.h  Paths.h
Source/Runtime/Launch/Private/: Launch.cpp
Source/Runtime/Termynth/Private/Assets/: AssetManager.cpp  AudioLoader.cpp  PakFile.cpp  SpriteAsset.cpp  SpriteLoader.cpp  TextureAsset.cpp  TextureLoader.cpp
Source/Runtime/Termynth/Private/Core/: EngineLoop.cpp  Logger.cpp
Source/Runtime/Termynth/Private/Engine/: AssetManager.cpp  AudioLoader.cpp  Engine.cpp  PakFile.cpp  SpriteAsset.cpp  SpriteLoader.cpp  TextureAsset.cpp  TextureLoader.cpp
Source/Runtime/Termynth/Private/Networking/: Message.cpp  NetworkingCore.cpp
Source/Runtime/Termynth/Private/Platform/Generic/: PlatformUtilsGeneric.cpp  PlatformWindowGeneric.cpp
Source/Runtime/Termynth/Private/Platform/Linux/: LinuxPlatformUtils.cpp  LinuxPlatformWindow.cpp
Source/Runtime/Termynth/Private/Platform/Windows/: WindowsPlatformUtils.cpp  WindwosPlatformWindow.cpp
Source/Runtime/Termynth/Private/Render/: Cell.cpp  Framebuffer.cpp  Renderer.cpp  Sprite.cpp  Texture.cpp
Source/Runtime/Termynth/Private/Render/Console2D/: Console2D.cpp
Source/Runtime/Termynth/Private/Utils/: ImageLoader.cpp  Paths.cpp
Source/Runtime/Termynth/Public/Assets/: AssetManager.h  AssetTypes.h  AudioClipAsset.h  AudioLoader.h  SpriteAsset.h  SpriteLoader.h  TextureAsset.h  TextureLoader.h
Source/Runtime/Termynth/Public/Core/: Core.h  Delegate.h  Globals.h  Logger.h  WindowSubsystem.h
Source/Runtime/Termynth/Public/Core/Math/: Func.h  Math.h  TypesForward.h  Vector.h  Vector2.h  Vector4.h
Source/Runtime/Termynth/Public/Engine/: AssetManager.h  AudioClipAsset.h  Engine.h  PakFile.h  SpriteAsset.h  TextureAsset.h
Source/Runtime/Termynth/Public/Game/: Game.h
Source/Runtime/Termynth/Public/Input/: InputManager.h  Key.h
Source/Runtime/Termynth/Public/Networking/: Message.h  NetworkingCore.h
Source/Runtime/Termynth/Public/Platform/Generic/: PlatformUtilsGeneric.h  PlatformWindowGeneric.h
Source/Runtime/Termynth/Public/Platform/Windows/: WindowsPlatformUtils.h
Source/Runtime/Termynth/Public/Render/: Cell.h  Color.h  FrameBuffer.h  Renderer.h  Sprite.h  Texture.h
Source/Runtime/Termynth/Public/Render/Console2D/: Camera2D.h  Console2D.h
Source/Runtime/Termynth/Public/Render/Console3D/: Console3D.h
Source/Runtime/Termynth/Public/Render/ConsoleUI/: ConsoleUI.h
Source/Runtime/Termynth/Public/Utils/: ImageLoader.h
Templates/Template_Blank/: CMakeLists.txt
Templates/Template_Blank/Scripts/: Type-Build-Compiler-Configuration-Target.bat
Templates/Template_Blank/Source/Private/: Template_Blank.cpp
docs/: _config.yml  guide.md  index.md  input.md  setup.md
docs/_data/: navigation.yml
